<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_sensor_integration</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>ed_sensor_integration_msgs</depend>
  <depend>geolib2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tue_config</depend>
  <depend>tue_filesystem</depend>
  <depend>visualization_msgs</depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
