<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_sensor_integration</name>
  <version>0.0.0</version>
  <description>Plugins to integrate sensor data into the ED worldmodel</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>code_profiler</depend>
  <depend>ed</depend>
  <depend>ed_sensor_integration_msgs</depend>
  <depend>geolib2</depend>
  <depend>image_geometry</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-common</depend>
  <depend>libpcl-kdtree</depend>
  <depend>rgbd</depend>
  <depend>rgbd_image_buffer</depend>
  <depend>roscpp</depend>
  <depend>tue_config</depend>
  <depend>visualization_msgs</depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <exec_depend>rosconsole_bridge</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>tue_filesystem</build_depend>
  <exec_depend>tue_filesystem</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
